--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<properties>
-		<protege.version>5.0.0-beta-19</protege.version>
+		<protege.version>5.1.2-SNAPSHOT</protege.version>
 	</properties>
 
 	<parent>
@@ -13,7 +13,7 @@
 	
 	<groupId>edu.stanford.protege</groupId>	
 	<artifactId>explanation-workbench</artifactId>
-	<version>3.0.1-SNAPSHOT</version>
+	<version>3.0.2-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<licenses>
@@ -63,16 +63,16 @@
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-osgidistribution</artifactId>
-			<version>4.1.3</version>
+			<version>5.1.6-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
-        <dependency>
+        <!-- dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>protege-common</artifactId>
 			<version>${protege.version}</version>
 			<scope>provided</scope>
-        </dependency>
+        </dependency -->
 
 		<dependency>
 			<groupId>edu.stanford.protege</groupId>
